--- a/_draft/2019-01-19-cmd-note.md
+++ b/_draft/2019-01-19-cmd-note.md
@@ -26,3 +26,12 @@ grep "18:00" access.log|cut -f 8 -d " "|cut -f 1 -d "?" | sort | uniq -dc | sort
 ```
 zgrep "url" access.log-20190212.gz|less|cut -d " " -f 5|less|uniq -dc | sort -k1,1nr > url.log
 ```
+
+## git 回滚操作
+
+```
+# 回退不丢失提交
+1. 回退:git reset --hard <commit>
+2. 将HEAD指回最新提交:git reset --soft HEAD@{1}
+3. commit: git commit -a -m "restore to <commit>
+```
