--- a/_draft/2019-01-19-cmd-note.md
+++ b/_draft/2019-01-19-cmd-note.md
@@ -35,3 +35,11 @@ zgrep "url" access.log-20190212.gz|less|cut -d " " -f 5|less|uniq -dc | sort -k1
 2. 将HEAD指回最新提交:git reset --soft HEAD@{1}
 3. commit: git commit -a -m "restore to <commit>
 ```
+
+## 全文检索
+
+从 golang 项目中查找关键字，grep 加上高亮与行数
+
+```
+find -name "*.go"|xargs grep "func" --color -n
+```
