--- a/_draft/2019-01-19-cmd-note.md
+++ b/_draft/2019-01-19-cmd-note.md
@@ -43,3 +43,7 @@ zgrep "url" access.log-20190212.gz|less|cut -d " " -f 5|less|uniq -dc | sort -k1
 ```
 find -name "*.go"|xargs grep "func" --color -n
 ```
+
+## 从 access 日志统计用户id
+
+cat access.log | awk -F'uid=' '{print $2}' | awk -F'&' '{print $1}' | sort | uniq
