--- a/_draft/2019-01-19-cmd-note.md
+++ b/_draft/2019-01-19-cmd-note.md
@@ -64,3 +64,26 @@ grep 1562776409227441 debug-20190714.log|grep ConsumeSendgiftRoomKafka|awk -F'"g
 grep 1562776409227441 debug-20190714.log|grep ConsumeSendgiftRoomKafka | awk -F'timestamp' '{print $2}'| awk -F':|,' '{if ($2<=1563033600) print $NC}' | grep -o '"consume_gold":[0-9]*' | awk -F: '{print $2}' | awk '{sum+=$1}END{print sum}'
 ```
 
+## 域名解析
+
+- 解析 dig, host
+- 根据ip查询域名 nslookup
+
+## 检查网路链路上的耗时
+
+- mtr
+
+
+## 查询当前文件夹中包含某关键词的文件
+
+```
+find . -name "*.h" | xargs grep -in "helloworld"
+```
+
+## 查看二进制文件中文本内容
+
+golang 的程序可以看到 import 的路径
+
+```
+strings binary_file
+```
