--- a/_draft/2019-01-19-cmd-note.md
+++ b/_draft/2019-01-19-cmd-note.md
@@ -87,3 +87,12 @@ golang 的程序可以看到 import 的路径
 ```
 strings binary_file
 ```
+
+
+## 查看机器之间的时间差
+
+服务之间有时间差比较大，可能导致业务逻辑异常，检查如下
+
+```
+clockdiff ip
+```
